--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,9 @@ services:
       - MARIADB_ROOT_PASSWORD=14565
       - MARIADB_USER=user
       - MARIADB_PASSWORD=14565
+      - MYSQL_TCP_PORT=3308
     expose:
-      - 3306
+      - 3308
 
   nginx:
     build: ./nginx
