--- a/guestbook/Dockerfile
+++ b/guestbook/Dockerfile
@@ -1,13 +1,11 @@
-FROM python:alpine
+FROM python:latest
 WORKDIR /usr/src/app
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
-RUN apk add --no-cache mariadb-connector-c-dev ;\
-    apk add --no-cache --virtual .build-deps \
-        build-base \
-        mariadb-dev ;
-RUN pip install --upgrade pip
+RUN apt update
+RUN apt install -y python3 git mariadb-client
 COPY ./requirements.txt .
 RUN pip install -r requirements.txt
-RUN apk del .build-deps
 COPY . .
+
+
